--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -6,6 +6,7 @@ $button-color: #39728e;
 $button-access-color: #59a969;
 $main-background-color: #c8ffef49;
 $main-white: #ffffff;
+$text-color: #333333;
 
 //Text
 $font-size-main: clamp(16px, 2.5vw, 22px);
