--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,3 +1,5 @@
+@import './variable';
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,4 +9,20 @@
 a {
   text-decoration: none;
   color: black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+button,
+label,
+li,
+input {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: $text-color;
 }
