feat: realize registration and Authorization

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -7,7 +7,7 @@ $button-access-color: #59a969;
 $main-background-color: #c8ffef49;
 $main-white: #ffffff;
 $text-color: #333333;
-
+$disabled: #3a435752;
 //Text
 $font-size-main: clamp(16px, 2.5vw, 22px);
 
