--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -4,7 +4,7 @@ $main-accent-color: #4f5a6e;
 $main-dark-color: #3a4357;
 $button-color: #39728e;
 $button-access-color: #59a969;
-$main-background-color: #c8ffef49;
+$main-background-color: rgba(240, 240, 240, 1);
 $main-white: #ffffff;
 $text-color: #333333;
 $disabled: #3a435752;
