feat: create file for DIalog window

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -7,7 +7,9 @@ $button-access-color: #59a969;
 $main-background-color: rgba(240, 240, 240, 1);
 $main-white: #ffffff;
 $text-color: #333333;
-$disabled: #3a435752;
+$disabled: #3a43575e;
+$color-danger: #d44950;
+$color-danger-opacity: #d4495069;
 //Text
 $font-size-main: clamp(16px, 2.5vw, 22px);
 
