--- a/src/assets/scss/blocks/_listItem.scss
+++ b/src/assets/scss/blocks/_listItem.scss
@@ -21,6 +21,10 @@
     height: 50px;
   }
 
+  &__title--edit {
+    width: 7%;
+  }
+
   &__row {
     border-bottom: 2px solid $main-background-color;
   }
@@ -31,6 +35,10 @@
     font-size: 24px;
     font-weight: 300;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    &--edit {
+      width: 10%;
+    }
   }
   .table__item {
     height: 50px;
@@ -48,7 +56,43 @@
 
     &--contacts {
       display: flex;
-      column-gap: 5px;
+      column-gap: 15px;
+    }
+
+    .hover-f {
+      display: inline-block;
+      width: 35px;
+      height: 35px;
+      margin-right: 3px;
+    }
+    .hover-f:hover {
+      background-color: $main-background-color;
+      transition: 0.3s;
+      cursor: pointer;
+    }
+    .hover-f:active {
+      transform: translateY(-5px);
+    }
+
+    &--edit {
+      color: $disabled;
+      margin-top: 5px;
+      margin-left: 5px;
+    }
+
+    &--delete {
+      color: $color-danger-opacity;
+      margin-top: 5px;
+      margin-left: 5px;
+    }
+    .hover-f:hover .table__item--delete {
+      color: $color-danger;
+      transition: 0.3s;
+    }
+
+    .hover-f:hover .table__item--edit {
+      color: $button-color;
+      transition: 0.3s;
     }
   }
 }
