--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -5,6 +5,7 @@ $main-dark-color: #3a4357;
 $button-color: #39728e;
 $button-access-color: #59a969;
 $main-background-color: rgba(240, 240, 240, 1);
+$modal-background-color:rgba(173, 173, 173, 0.356);
 $main-white: #ffffff;
 $text-color: #333333;
 $disabled: #3a43575e;
