feat: add loader and add dialog window for deleting interviews

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -8,6 +8,7 @@ $main-background-color: rgba(240, 240, 240, 1);
 $modal-background-color:rgba(173, 173, 173, 0.356);
 $main-white: #ffffff;
 $text-color: #333333;
+$text-color-alternative: #333333bd;
 $disabled: #3a43575e;
 $color-danger: #d44950;
 $color-danger-opacity: #d4495069;
