--- a/src/assets/scss/blocks/_listItem.scss
+++ b/src/assets/scss/blocks/_listItem.scss
@@ -95,6 +95,43 @@
       transition: 0.3s;
     }
   }
+
+  &__empty-status {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:30px;
+    text-wrap:nowrap;
+    column-gap:5px;
+    font-size:22px;
+    position:relative;
+    width:55vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    &--link {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      font-size:18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      border-radius:$border-radius-small;
+      outline: none;
+      border:none;
+      margin-left:20px;
+      width:7em;
+      height:40px;
+      background-color: $button-access-color;
+      color:$main-white;
+    }
+    &--link:hover {
+      transition: 0.3s;
+      transform:translateY(-2px);
+      cursor: pointer;
+    }
+    &--link:active {
+      transform: translateY(-5px);
+    }
+  }
 }
 
 .v-enter-active,
