--- a/src/assets/scss/blocks/_editItem.scss
+++ b/src/assets/scss/blocks/_editItem.scss
@@ -71,6 +71,16 @@
       height:40px;
       padding-inline: 10px;
       cursor:pointer;
+      transition: 0.3s;
+      margin-bottom: 10px;
+    }
+
+    &-button:hover {
+      transform: translateY(-2px);
+    }
+    &-button:active {
+      transform: translateY(-5px);
+
     }
   }
 }
