feat: add styles for stage inputs

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -6,6 +6,7 @@ $button-color: #39728e;
 $button-access-color: #59a969;
 $main-background-color: rgba(240, 240, 240, 1);
 $modal-background-color:rgba(173, 173, 173, 0.356);
+$color-grey:#808080;
 $main-white: #ffffff;
 $text-color: #333333;
 $text-color-alternative: #333333bd;
