--- a/src/assets/scss/blocks/_editItem.scss
+++ b/src/assets/scss/blocks/_editItem.scss
@@ -66,6 +66,8 @@
       display:flex;
       align-items: center;
       column-gap: 5px;
+      width:30%;
+      justify-content: center;
       outline:none;
       border:none;
       height:40px;
@@ -108,7 +110,39 @@
         outline: none;
       padding-inline: 8px;
       font-size: 18px;
+      margin-bottom: 10px;
       }
+
+      .stages-card__delete-button {
+        background-color: $color-danger;
+        color:$main-white;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 5px;
+        outline:none;
+        border:none;
+        height:40px;
+        width:30%;
+        
+        padding-inline: 10px;
+        cursor:pointer;
+        transition: 0.3s;
+        margin-bottom: 10px;
+        border-radius: $border-radius-small;
+      }
+  
+      .stages-card__delete-button:hover {
+        transform: translateY(-2px);
+      }
+      .stages-card__delete-button:active {
+        transform: translateY(-5px);
+
+      }
+    }
+    .label {
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-size:18px;
     }
   }
 }
