--- a/src/assets/scss/blocks/_editItem.scss
+++ b/src/assets/scss/blocks/_editItem.scss
@@ -54,7 +54,7 @@
       outline: none;
       padding-inline: 8px;
       font-size: 18px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
   }
 
@@ -74,7 +74,7 @@
       padding-inline: 10px;
       cursor:pointer;
       transition: 0.3s;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       border-radius: $border-radius-small;
     }
 
@@ -87,13 +87,13 @@
     }
 
     &-card {
-      border:1px solid $color-grey;
-      padding:8px;
+      padding:10px;
       display:flex;
       flex-flow:column;
       width:100%;
       row-gap:5px;
       border-radius: $border-radius-main;
+      box-shadow: 0px 0px 6px 0px rgba(34, 60, 80, 0.486);
       &-input {
         height:35px;
       border: 1px solid $color-grey;
@@ -111,6 +111,7 @@
       padding-inline: 8px;
       font-size: 18px;
       margin-bottom: 10px;
+      padding-top:5px;
       }
 
       .stages-card__delete-button {
@@ -124,7 +125,6 @@
         border:none;
         height:40px;
         width:30%;
-        
         padding-inline: 10px;
         cursor:pointer;
         transition: 0.3s;
@@ -143,6 +143,23 @@
     .label {
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       font-size:18px;
+    }
+  }
+  &-stages-result {
+    display:flex;
+    margin-top: 20px;
+    column-gap: 20px;
+
+    &--offer,&--reject {
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 5px;
+      font-size:20px;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    #reject,#offer {
+      transform: scale(1.2);
     }
   }
 }
