--- a/src/assets/scss/blocks/_editItem.scss
+++ b/src/assets/scss/blocks/_editItem.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 99vw;
   margin-top: 3%;
   &--inner {
     -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
@@ -45,7 +45,7 @@
     transform: translateY(-2px);
   }
   &__save-btn:active {
-    transform: translateY(-5px);
+    transform: translateY(-7px);
   }
 }
 
@@ -66,7 +66,13 @@
       padding-inline: 8px;
       font-size: 18px;
       margin-bottom: 20px;
+      appearance: none;
     }
+
+    .inputs-fork::-webkit-outer-spin-button,
+.inputs-fork::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
   }
 
   &-stages {
@@ -86,8 +92,8 @@
       cursor:pointer;
       transition: 0.3s;
       margin-bottom: 20px;
-      border-radius: $border-radius-small;
     }
+    
 
     &-button:hover {
       transform: translateY(-2px);
