feat: add functional update(edit) interview

--- a/src/assets/scss/blocks/_editItem.scss
+++ b/src/assets/scss/blocks/_editItem.scss
@@ -47,6 +47,11 @@
   &__save-btn:active {
     transform: translateY(-7px);
   }
+  &__save-btn:disabled {
+    background-color: $disabled;
+    pointer-events: none;
+    user-select: none;
+  }
 }
 
 .inputs__more {
