--- a/src/assets/scss/blocks/_listItem.scss
+++ b/src/assets/scss/blocks/_listItem.scss
@@ -12,17 +12,13 @@
 }
 
 .table {
-  width: 55vw;
+  width: 75vw;
   border-collapse: collapse;
   table-layout: fixed;
 
   &__thead {
     background-color: $main-background-color;
     height: 50px;
-  }
-
-  &__title--edit {
-    width: 7%;
   }
 
   &__row {
@@ -143,3 +139,20 @@
 .v-leave-to {
   opacity: 0;
 } 
+
+.text-result {
+  padding: 5px 10px;
+  border-radius:100px;
+  font-size:18px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color:white;
+  background-color: $color-danger;
+}
+
+.text-result--reject {
+  background-color: $color-danger;
+}
+
+.text-result-offer {
+  background-color: $button-access-color;
+}
