feat: add styles for unknown result

--- a/src/assets/scss/blocks/_listItem.scss
+++ b/src/assets/scss/blocks/_listItem.scss
@@ -160,6 +160,10 @@
   background-color: $button-access-color;
 }
 
+.text-result-unknown {
+  display:none;
+}
+
 .table__item--stages {
   width:25%;
 }
